[gd_scene load_steps=4 format=3 uid="uid://mk230kyxlcmn"]

[ext_resource type="Theme" uid="uid://skah0wjpgann" path="res://theme_default.tres" id="1_crxy0"]
[ext_resource type="Script" path="res://scripts/reveal_panel.gd" id="2_2r51q"]
[ext_resource type="PackedScene" uid="uid://dtlvywg5qfge5" path="res://scenes/secret_label.tscn" id="3_aihyx"]

[node name="RevealPanel" type="PanelContainer"]
custom_minimum_size = Vector2(300, 300)
theme = ExtResource("1_crxy0")
script = ExtResource("2_2r51q")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SecretLabel" parent="MarginContainer/VBoxContainer/CenterContainer" instance=ExtResource("3_aihyx")]
unique_name_in_owner = true
layout_mode = 2

[node name="PlayAgainButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
text = "Play again"

[connection signal="pressed" from="MarginContainer/VBoxContainer/PlayAgainButton" to="." method="_on_play_again_button_pressed"]
